# projmgt

./: .gitignore  LICENSE  README.md  projmgt.cabal  projmgt.cabal~
app/: Main.hs
