name:                projmgt
version:             0.1.0.0
synopsis:            Project management tool
description:         Please see README.md
homepage:            https://github.com/misc-tools/projmgt.git
license:             MIT
license-file:        LICENSE
author:              Viet Nguyen
maintainer:          viet.nguyen182@gmail.com
copyright:           2016 Viet Nguyen
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   exposed-modules:     Data.String.Strip
--   build-depends:       base >= 4.7 && < 5
--   default-language:    Haskell2010

executable projmgt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , foldl 
                     , ansi-terminal
                     , system-filepath
                     , github
  default-language:    Haskell2010

test-suite projmgt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , projmgt
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/misc-tools/projmgt.git
